# fastapi-aws

./: Dockerfile  buildspec.yml  main.py  pyproject.toml  test_main.py
