[project]
name = "aws-ci-cd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.120.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

# PYTEST AYARINI BURAYA EKLEDİM
[tool.pytest.ini_options]
# Test bulamazsa hata verme (exit code 5 yerine 0 döndür)
no_tests_found_return_code = 0